:bug: no longer to wide on mobile. Fixes #4

--- a/source/css/archive.styl
+++ b/source/css/archive.styl
@@ -2,7 +2,7 @@
 @import "underline"
 
 .archive
-	width: contentWidth
+	contentWidth()
 	padding: 3rem
 	display: block
 	font-size: 2.369rem
