--- a/source/css/article.styl
+++ b/source/css/article.styl
@@ -1,7 +1,7 @@
 @import "variables"
 
 article
-	width: contentWidth
+	contentWidth()
 	text-align: justify
 	margin: 0 2rem
 	margin-bottom: 2rem
@@ -160,9 +160,10 @@ table
 .post__info span
 	margin-right: 1em
 
+//TODO improve this
 iframe
 	width: 100%
-	height: (contentWidth * 9 / 16)
+	height: (baseContentWidth * 9 / 16)
 
 //pullquotes
 
