--- a/source/css/footer.styl
+++ b/source/css/footer.styl
@@ -26,7 +26,7 @@ footerTextColor = backgroundColor
 
 .footer__element
 	padding: 1rem
-	width: (contentWidth / 4)
+	width: (baseContentWidth / 4)
 	box-sizing: border-box
 	h5
 		margin-top: 0
