--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -57,7 +57,7 @@ a:hover
 
 .different-posts
 	display: block
-	width: contentWidth
+	contentWidth()
 	text-align: center
 	& a
 		link-underline(backgroundColor, textColor, textColor)
