--- a/source/css/variables.styl
+++ b/source/css/variables.styl
@@ -29,7 +29,10 @@ headerColor = #f9fafa
 backgroundColor = #f9fafa
 
 //The standard width for content in the middle.
-contentWidth = 50rem
+baseContentWidth = 50rem
+contentWidth()
+	width: baseContentWidth
+	max-width: 100%
 
 fontsSans = "Noto Sans", sans-serif
 fontsSerif = "Noto Serif", serif
